<resources>
    <string name="app_name">Multiple Language Support</string>
    <string name="welcome">Welcome</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Do not have account ? Sign up</string>
    <string name="changelang">Change Language</string>
    <string name="notechange">The language has been converted !</string>
</resources>
